# os-map-vlm

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  nls_group_layers.csv  nls_tilelayers.csv  plan.md  pyproject.toml
.github/workflows/: ci.yml
batch/: 10-patchify_25inch.sh  2-download_6inch_1st_ed.sh  3-download_town_plans_1056.sh  4-download_town_plans_500.sh  5-download_25_inch.sh  5b-download_25inch_scotland2.sh  6-patchify_6inch_2nd_ed.sh  7-patchify_6inch_1st_ed.sh  8-patchify_town_plans_1056.sh  9-patchify_town_plans_500.sh  _1-download_6inch_2nd_ed.sh
data/: metadata_nls_OS_Town_Plans_Eng_non500_WFS_2026-05-27_084755.geojson  metadata_nls_OS_Town_Plans_Eng_non500_WFS_2026-05-27_084755_with_xyz.geojson
scripts/: 1-download_6inch_2nd_ed.py  10-patchify_25inch.py  2-download_6inch_1st_ed.py  25_inch_1st_countys_to_layer.py  3-download_town_plans.py  3-download_town_plans_1506.py  4-download_town_plans_500.py  5-download_25inch.py  5b-download_25inch_scotland2.py  6-patchify_6inch_2nd_ed.py  6inch_1st_countys_to_layer_xyz.py  7-patchify_6inch_1st_ed.py  8-patchify_town_plans_1056.py  9-patchify_town_plans_500.py  _1-download_6inch_2nd_ed.py  check_filesizes.sh  town_plans_1056_countys_to_layer_xyz.py  town_plans_500_countys_to_layer_xyz.py  town_plans_countys_to_layer_xyz.py
src/os_map_vlm/: __init__.py
